connected contract with basic website

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,6 +10,9 @@
             <h1>Voting Website</h1>
             <button id="connectButton">Connect</button>
         </div>
+        <div>
+            <h1>No. of candidates</h1>
+        </div>
     </body>
 
     <script src="./index.js" type="module"></script>
